--- a/src/screens/busBookings/busBookings.css
+++ b/src/screens/busBookings/busBookings.css
@@ -1,3 +1,77 @@
 .bus_details_main_container{
     min-height: calc(100vh - 100px);
 }
+
+.bus-details-container {
+    width: 760px;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 30px 40px;
+    border-radius: 5px;
+    font-size: 20px;
+  }
+  
+  .filters-container {
+    display: flex;
+    align-items: center;
+    background-color: #636363;
+    border-radius: 8px;
+    padding: 8px 12px 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    gap: 10px;
+    box-sizing: border-box;
+  }
+  
+  .filter-input-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .filter-input-wrapper label {
+    font-size: 14px;
+    margin-bottom: 4px;
+    color: #000;
+  }
+  
+  .filter-input-wrapper input {
+    width: 100%;
+    padding: 6px 8px;
+    border-radius: 4px;
+  }
+  
+  .filter-input-wrapper input[type="date"] {
+    border: 1px solid #ccc;
+  }
+  
+  .filter-button-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .filter-button-wrapper label {
+    font-size: 14px;
+    margin-bottom: 4px;
+    color: #000;
+  }
+  
+  .filter-button-wrapper button {
+    background-color: #ccc;
+    border: none;
+    border-radius: 6px;
+    padding: 8px 12px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .table-header {
+    height: 45px;
+    color: #353434dd;
+    background-color: #aaa;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 4px;
+  }
+  
